[package]
name = "oxagaudiotool"
version = "0.2.0"
edition = "2021"
authors = ["Filippo Lollato", "Giulio Pimenoff Verdolin", "Marco Basso"]
publish = ["kellnr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robotics_lib = { version = "0.1.21", registry = "kellnr"}
kira = "0.8.5"

